--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1 style="font-size:40px;">GEOG370HW6Pt1 - Andrew Bryant</h1>
     <img src="./BachelorsDegreeorHigher25years oldMaryland.png" width = "1500" height = "900" alt="">
     <p style="font-size:40px;">This map displays the number of people in each Maryland county that are 25 years or older and have a Bachelor's Degree or higher. The biggest number of people in these groups can be found in Montgomery County, Prince George's County, and Baltimore County. These counties surround the Metro areas of Washington D.C. and Baltimore. The lowest numbers are seen in Western MD and eastern MD. It would be interesting to see how much of this is because of population density and how much is due to lower rates of Bachelor's in these areas. It would also be interesting to investigate why Baltimore County has higher college education or higher rates than Baltimore City, and whether this holds true for Washington D.C. compared to Montgomery and Prince George's Counties.</p>
-    <h2 style="font-size:40px;"><a href = https://github.com/andrew20021449/GEOG370HW6Pt1/blob/main/MarylandGeoJSON.geojson>GeoJSON(4326 Projection)</a>
+    <h2 style="font-size:40px;"><a href = https://github.com/andrew20021449/GEOG370HW6Pt1/blob/main/MarylandGeoJSON.geojson>GeoJSON of Maryland (4326 Projection)</a>
     <h3 style="font-size:40px;"><a href = https://github.com/andrew20021449/GEOG370HW6Pt1/blob/main/ACSST5Y2019.S1501_data_with_overlays_2021-11-18T084736.csv>CSV of Data Used</a>
     <h3 style="font-size:40px;"><a href = https://data.census.gov/cedsci/table?t=Educational%20Attainment&g=0400000US24%240500000&tid=ACSST5Y2019.S1501>US Census Website for Data</a>
 </body>
